tests/ui/error-codes/E0416.rs
fn main() {
    match (1, 2) {
        (x, x) => {} //~ ERROR E0416
    }
}
